crates/runtime/tests/github/snapshots/integration__github__pull_requests_discussion_comments_schema.snap
---
source: crates/runtime/tests/github/mod.rs
expression: batches_to_string(&result_batches)
---
+---------------------------+-------------------------------------------------------------------------+-------------+
| column_name               | data_type                                                               | is_nullable |
+---------------------------+-------------------------------------------------------------------------+-------------+
| additions                 | Int64                                                                   | YES         |
| assignees                 | List(Utf8, field: 'login')                                              | YES         |
| author                    | Utf8                                                                    | YES         |
| base_ref                  | Utf8                                                                    | YES         |
| body                      | Utf8                                                                    | YES         |
| changed_files             | Int64                                                                   | YES         |
| closed_at                 | Timestamp(ms)                                                           | YES         |
| closed_by                 | Utf8                                                                    | YES         |
| closing_issues_count      | Int64                                                                   | YES         |
| closing_issues_references | List(Int64, field: 'number')                                            | YES         |
| comments_count            | Int64                                                                   | YES         |
| commits_count             | Int64                                                                   | YES         |
| created_at                | Timestamp(ms)                                                           | YES         |
| deletions                 | Int64                                                                   | YES         |
| hashes                    | List(Utf8, field: 'id')                                                 | YES         |
| head_ref                  | Utf8                                                                    | YES         |
| head_sha                  | Utf8                                                                    | YES         |
| id                        | Utf8                                                                    | YES         |
| is_draft                  | Boolean                                                                 | YES         |
| labels                    | List(Utf8, field: 'name')                                               | YES         |
| merge_queue_position      | Int64                                                                   | YES         |
| merge_queue_state         | Utf8                                                                    | YES         |
| merge_state_status        | Utf8                                                                    | YES         |
| mergeable                 | Utf8                                                                    | YES         |
| merged_at                 | Timestamp(ms)                                                           | YES         |
| merged_by                 | Utf8                                                                    | YES         |
| milestone_id              | Utf8                                                                    | YES         |
| milestone_title           | Utf8                                                                    | YES         |
| number                    | Int64                                                                   | YES         |
| reactions_count           | Int64                                                                   | YES         |
| review_decision           | Utf8                                                                    | YES         |
| reviews_count             | Int64                                                                   | YES         |
| state                     | Utf8                                                                    | YES         |
| status_check_rollup       | Utf8                                                                    | YES         |
| title                     | Utf8                                                                    | YES         |
| updated_at                | Timestamp(ms)                                                           | YES         |
| url                       | Utf8                                                                    | YES         |
| discussion                | List(Struct("body": Utf8, "created_at": Timestamp(ms), "author": Utf8)) | YES         |
| owner                     | Utf8                                                                    | NO          |
| repo                      | Utf8                                                                    | NO          |
+---------------------------+-------------------------------------------------------------------------+-------------+
