crates/runtime/tests/github/snapshots/integration__github__release_assets_schema.snap
---
source: crates/runtime/tests/github/mod.rs
expression: batches_to_string(&result_batches)
---
+------------------+---------------+-------------+
| column_name      | data_type     | is_nullable |
+------------------+---------------+-------------+
| id               | Utf8          | YES         |
| release_id       | Utf8          | YES         |
| release_tag_name | Utf8          | YES         |
| name             | Utf8          | YES         |
| download_count   | Int64         | YES         |
| size             | Int64         | YES         |
| content_type     | Utf8          | YES         |
| url              | Utf8          | YES         |
| created_at       | Timestamp(ms) | YES         |
| updated_at       | Timestamp(ms) | YES         |
| owner            | Utf8          | NO          |
| repo             | Utf8          | NO          |
+------------------+---------------+-------------+
