crates/runtime/tests/github/snapshots/integration__github__workflow_runs_schema.snap
---
source: crates/runtime/tests/github/mod.rs
expression: batches_to_string(&result_batches)
---
+----------------+----------------------------------------------------------------------------------+-------------+
| column_name    | data_type                                                                        | is_nullable |
+----------------+----------------------------------------------------------------------------------+-------------+
| id             | Int64                                                                            | NO          |
| name           | Utf8                                                                             | YES         |
| head_branch    | Utf8                                                                             | YES         |
| head_sha       | Utf8                                                                             | NO          |
| run_number     | Int64                                                                            | NO          |
| display_title  | Utf8                                                                             | NO          |
| event          | Utf8                                                                             | NO          |
| status         | Utf8                                                                             | YES         |
| conclusion     | Utf8                                                                             | YES         |
| workflow_id    | Int64                                                                            | NO          |
| run_started_at | Timestamp(ms)                                                                    | YES         |
| jobs_url       | Utf8                                                                             | NO          |
| logs           | Map("entries": non-null Struct("keys": non-null Utf8, "values": Utf8), unsorted) | YES         |
| owner          | Utf8                                                                             | NO          |
| repo           | Utf8                                                                             | NO          |
+----------------+----------------------------------------------------------------------------------+-------------+
